# pocket-chemist-nmr

./: .gitignore  .readthedocs.yaml  BUGS.md  README.md  Taskfile.yml  pyproject.toml  setup.cfg
.benchmarks/Darwin-CPython-3.9-64bit/: 0001_6a1f654d5274f75a98cd098b03eb204af44fc826_20220129_201630_uncommited-changes.json
data/CD20170127_av500hd_101__ubq_hsqcsi2d/: acqu2  acqu2s  audita.txt  fid.com  format.ased  ft12.com  pulseprogram  uxnmr.info
data/bruker/AM20220505_av500hd_102_ubq_hsqcsi2d_nus/: acqu  acqu2  acqu2s  acqus  audita.txt  fid.com  format.ased  format.temp  ft12.com  nuslist  pulseprogram  scon2  ser  ser_full  shimvalues  smile.com  specpar
data/bruker/CD20170124_av500hd_100_ubq_oneone1d/: Makefile  README.md  Taskfile.yml  acqu  acqus  audita.txt  fid  fid.com  format.ased  format.temp  ft.com  ft_complex.com  oneone-echo_N-dcpl.jll.hdr  oneone-echo_N-dcpl.jll_complex.hdr  oneone-echo_N-dcpl.jll_ps.hdr  pulseprogram  scon2  shimvalues  spec.hdr  spec_em.hdr  spec_ext.hdr  spec_ext_real.hdr  spec_ft.hdr  spec_ft_ext.hdr  spec_real.hdr  spec_real_zf.hdr  spec_sp.hdr  spec_zf.hdr
data/bruker/CD20170124_av500hd_101_ubq_hsqcsi2d/: Makefile  README.md  Taskfile.yml  acqu  acqus  fid.com  format.temp  ft12_complex.com  ft12_complex_tp.com  hsqcetfpf3gpsi2.hdr  pc12.com  scon2  ser  shimvalues  spec.hdr  spec_ft.hdr  spec_tp.hdr  spec_tp_ft.hdr  spec_tp_zf.hdr  spec_zf.hdr
data/bruker/CD20170124_av500hd_103_ubq_hnco3d/: Makefile  README.md  Taskfile.yml  acqu  acqu2s  acqu3  acqu3s  fid.com  ft.1.com  ft.2.com  pc123.com  scon2  shimvalues  specpar  uxnmr.par
data/bruker/CD20170124_av500hd_103_ubq_hncosi2d/: README.md  acqu2  acqus  audita.txt  fid.com  format.ased  format.temp  ft.1.com  ft.2.com  ft.3.com  pc123.com  pulseprogram
docs/: Taskfile.yml  conf.py  index.rst
docs/_templates/: click_nmrpipe_template.rst
docs/cli/: index.rst
docs/cli/nmrpipe/: index.rst
docs/python_interface/: index.rst
docs/python_interface/spectra/: index.rst
docs/releases/: 0.2.1.rst  index.rst
docs/spectra/: index.rst
docs/spectra/processing/: pocketchemist_nmr.spectra.NMRSpectrum.ft.rst
src/pocketchemist_nmr/: __init__.py
src/pocketchemist_nmr/cli/: __init__.py  cli.py  gui.py  hookimpls.py
tests/: cases.py  conftest.py  test_pocketchemist_nmr.py
tests/cases/: nmrpipe.py
tests/cli/: test_cli.py
tests/processors/: test_fileio.py
tests/spectra/: test_nmrpipe.py  test_nmrpipe_spectrum.py  test_utils.py
tests/spectra/nmrpipe/: conftest.py  (+4 more)
(+189 files in other folders)
