[tool.poetry]
name = "pocketchemist-nmr"
version = "0.1.0"
description = ""
authors = ["J Lorieau"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pocketchemist = "^0.1.0"
click = "^8.0.3"
click-option-group = "^0.5.3"
nmrglue = "^0.8"
humanfriendly = "^10.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pocketchemist"]
cli = "pocketchemist_nmr.cli:nmrpipe"
config = "pocketchemist_nmr.config:config"
