[tool.poetry]
name = "pocketchemist-nmr"
version = "0.1.7"
description = ""
authors = ["J Lorieau"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pocketchemist = "^0.1.1"
click = "^8.0.3"
click-option-group = "^0.5.3"
humanfriendly = "^10.0"
loguru = "^0.5.3"
torch = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-repeat = "^0.9.1"
virtualenv = "^20.13.0"
pytest-benchmark = "^3.4.1"
pytest-profiling = "^1.7.0"
Sphinx = "^4.4.0"
furo = "^2022.2.14"
sphinx-click = "^3.1.0"
pytest-cases = "^3.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pocketchemist"]
cli = "pocketchemist_nmr.cli:nmrpipe"
config = "pocketchemist_nmr.config:config"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"
