[metadata]
name = pocketchemist-nmr
version = 0.1.9
author = Justin L Lorieau
author_email = justin@lorieau.com
description = NMR analysis tools for pocketchemist
long_description = file: README.md
license = GPLv3

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
include_package_data = true
install_requires =
    PyYAML >= 6.0
    loguru >= 0.5.3
    pluggy >= 1.0.0
    click >= 8.0.3
    click-option-group >= 0.5.3
    humanfriendly >= 10.0
    torch >= 1.1.20
    kivy >= 2.1.0
    kivymd >= 0.104.2
    pocketchemist >= 0.1

[options.extras_require]
testing =
    pytest >= 6.2
    pytest-repeat >= 0.9.1
    pytest-benchmark >= 3.4.1
    pytest-profiling >= 1.7.0
    pytest-cases >= 3.6.9
doc =
    sphinx >= 4.4.0
    sphinx-click >= 3.1.0
    furo >= 2022.2.14

[options.package_data]
tests = tests

[options.packages.find]
where = src

[options.entry_points]
pocketchemist =
    cli = pocketchemist_nmr.cli.hookimpls

[tool:pytest]
testpaths = tests
addopts = --benchmark-disable
